--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<artifactId>realityapi</artifactId>
 		<version>24.3.25</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>2.0.12</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-jdk14</artifactId>
+		<version>2.0.12</version>
+	</dependency>
 </dependencies>
 
 <build>
