--- a/pom.xml
+++ b/pom.xml
@@ -21,32 +21,32 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<version>5.9.2</version>
 		<scope>test</scope>
 	</dependency>
-
+	
 	<dependency>
 		<groupId>org.javacord</groupId>
 		<artifactId>javacord</artifactId>
 		<version>3.8.0</version>
 		<type>pom</type>
 	</dependency>
-
+	
 	<dependency>
 		<groupId>org.xerial</groupId>
 		<artifactId>sqlite-jdbc</artifactId>
 		<version>3.45.2.0</version>
 	</dependency>
-
+	
 	<dependency>
 		<groupId>me.undermon</groupId>
 		<artifactId>realityapi</artifactId>
 		<version>24.3.25</version>
 	</dependency>
-
+	
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
 		<version>2.0.12</version>
 	</dependency>
-
+	
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-jdk14</artifactId>
@@ -60,6 +60,47 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.0.0-M8</version>
+		</plugin>
+		
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>appassembler-maven-plugin</artifactId>
+			<version>2.1.0</version>
+			<configuration>
+				<programs>
+					<program>
+						<mainClass>me.undermon.maplogger.Application</mainClass>
+						<id>MapLogger</id>
+					</program>
+				</programs>
+			</configuration>
+			<executions>
+				<execution>
+					<id>create-distribution</id>
+					<phase>package</phase>
+					<goals>
+						<goal>assemble</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+		<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<version>3.7.1</version>
+			<configuration>
+				<descriptors>
+					<descriptor>distribution.xml</descriptor>
+				</descriptors>
+			</configuration>
+			<executions>
+				<execution>
+					<id>create-archive</id>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+				</execution>
+			</executions>
 		</plugin>
 	</plugins>
 </build>
