--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<version>3.45.2.0</version>
 	</dependency>
 	
+	<!-- TODO Change to jitpack -->
 	<dependency>
 		<groupId>me.undermon</groupId>
-		<artifactId>realityapi</artifactId>
+		<artifactId>realityapi</artifactId> 
 		<version>24.3.25</version>
 	</dependency>
-	
+
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
