--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,6 +1,7 @@
 {
 	"realitymod_api": "https://servers.realitymod.com/api/ServerInfo",
 	"token": "<YOUR BOT TOKEN>",
+	"timezone": "UTC",
 	"fetch_interval": 5,
 	"monitored_servers": {
 		"<SERVER NAME>": "<SERVER IDENTIFICER>"
