Made file logging async.

--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,2 +1,10 @@
 writerConsole = console
 writerConsole.level = info
+
+writerLog = file
+writerLog.file = logs
+writerLog.level = info
+writerLog.append = true
+writerLog.buffered = true 
+
+writingthread = true 
