Configurable command's default timespan and unit.

--- a/src/main/resources/maptracker.properties
+++ b/src/main/resources/maptracker.properties
@@ -3,3 +3,5 @@ token = YOUR BOT TOKEN
 fetchInterval = 5
 serverNames = SERVER-NAME SERVER-NAME SERVER-NAME 
 serverIds = SERVER-ID SERVER-ID SERVER-ID
+defaultUnit = days
+defaultTimespan = 3
